<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/conteinerPrincipal"
        android:background="@drawable/ceuazul"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <Switch
            android:id="@+id/trocarTema"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/txtTemperatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_30_c"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_margin="50dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/trocarTema"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent" />

        <TextView
            android:id="@+id/txtPaisCidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brasil_sao_paulo"
            android:textStyle="italic"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/txtTemperatura"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imgClima"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/txtTemperatura"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />

        <View
            android:id="@+id/containerInfo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/rounded_background"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@+id/imgClima"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txtTituloInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_view"
            android:textSize="18sp"
            android:textStyle="italic"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@id/containerInfo"
            app:layout_constraintStart_toStartOf="@id/containerInfo"
            app:layout_constraintEnd_toEndOf="@id/containerInfo" />

        <TextView
            android:id="@+id/txtTituloInfo01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/clima_n_ceu_limpo_n_n_umidade_n_50"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/containerInfo"
            app:layout_constraintEnd_toStartOf="@id/txtTituloInfo02"
            app:layout_constraintStart_toStartOf="@id/containerInfo"
            app:layout_constraintTop_toBottomOf="@id/txtTituloInfo"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txtTituloInfo02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/temp_min_n_21_n_n_temp_max_n_25"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/containerInfo"
            app:layout_constraintEnd_toEndOf="@id/containerInfo"
            app:layout_constraintStart_toEndOf="@id/txtTituloInfo01"
            app:layout_constraintTop_toBottomOf="@id/txtTituloInfo"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editBuscarCidade"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:hint="@string/buscar_cidade"
            android:maxLines="1"
            android:padding="15dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btBuscar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerInfo" />

        <Button
            android:id="@+id/btBuscar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/buscar"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="15dp"
            android:backgroundTint="@color/azul"
            app:layout_constraintTop_toBottomOf="@id/containerInfo"
            app:layout_constraintStart_toEndOf="@id/editBuscarCidade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ProgressBar
            android:id="@+id/preogressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:indeterminateTint="@color/white"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/editBuscarCidade"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
